# django_application

./: README.md  makes.nix  manage.py  pyproject.toml
django_application/: asgi.py  settings.py  urls.py  wsgi.py
pokeapi/: admin.py  apps.py  models.py  urls.py  views.py
pokeapi/management/commands/: evolution_chain.py
pokeapi/migrations/: 0001_initial.py  0002_fetch_all_pokemons.py
pokeapi/utils/: __init__.py  objects.py
