[tool.poetry]
name = "django_application"
version = "0.1.0"
description = ""
authors = ["Diego Restrepo <restrepomesadiego@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
requests = "^2.26.0"
more-itertools = "^8.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
